reset inactive page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <!-- refresh page after half an hour -->
-  <meta http-equiv="refresh" content="1800;url=/" />
+  <!-- <meta http-equiv="refresh" content="1800;url=/" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Na'amat visitor center website" />
